Fix build warnings in WebCore/Modules/indexeddb/server/IDBSerialization.cp https://bugs.webkit.org/show_bug.cgi?id=165070

Reviewed by Brady Eidson.

* Modules/indexeddb/server/IDBSerialization.cpp:


Canonical link: https://commits.webkit.org/182692@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208984 268f45cc-cd09-0410-ab3c-d52691b4dbfc